--- a/index.html
+++ b/index.html
@@ -5,8 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style/style.css">
+
 </head>
 <body>
+    <section id="home">
+        <div class="parte-1">
+            <ul class="elementos">
+                <li class="acme">
+                    <h1>ACME<br>PHOTOGRAPHY</h1>
+                </li>
+                <li>
+                    <p>Beautiful Natural Photography</p>
+                </li>
+                <li class="view">
+                    <p>View Work</p>
+                </li>
+            </ul>
+        <img src="img/ae5e853f-f496-4c21-bf97-4abb75d9068a.jpg" alt="#">
+        </div>
+    </section>
+    <main>
+        <section>
+            <div class="principal">
+                <div class="titulo">
+                    <h3>|| Our Work ||</h3>
+                    <img src="img/coqueiro.jpg" alt="#">
+                </div>
+                <h3>Photo One</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+
+                <img src="img/gaivotas.jpg" alt="#">
+                <h3>Photo Two</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+
+                <img src="img/pinheiros.jpg" alt="#">
+                <h3>Photo Three</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+
+                <img src="img/vale.jpg" alt="#">
+                <h3>Photo Four</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+
+                <img src="img/bicho.jpg" alt="#">
+                <h3>Photo Five</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+
+                <img src="img/lago.jpg" alt="#">
+                <h3>Photo Six</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+
+                <img src="img/cobra.jpg" alt="#">
+                <h3>Photo Seven</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+            
+                <img src="img/bonito.jpg" alt="#">
+                <h3>Photo Eight</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <h2>Get In Touch</h2>
+        <p>Email or call us to set up a consult</p>
+        <p>Email: <b>murilo@renzirossi.com.br</b></p>
+        <p>Phone: <b>(12) 98303-1497</b></p>
+    </footer>
     
 </body>
 </html>
